# trustchain

./: .gitignore  .pre-commit-config.yaml  .release-plz.toml  404.html  Cargo.toml  LICENSE-MIT  README.md  STYLE_GUIDE.md  index.html  mkdocs.yml  trustchain_config.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  rust.yml
acknowledgements/: index.html
contributing/: index.html
crates/trustchain-api/: Cargo.toml
crates/trustchain-api/src/: api.rs  errors.rs  lib.rs
crates/trustchain-cli/: Cargo.toml
crates/trustchain-cli/src/: config.rs  lib.rs
crates/trustchain-core/: Cargo.toml
crates/trustchain-core/src/: attestor.rs  commitment.rs  controller.rs  data.rs  graph.rs  key_manager.rs  lib.rs  resolver.rs  subject.rs  utils.rs
crates/trustchain-cr/: Cargo.toml
crates/trustchain-cr/src/: attestation_utils.rs  data.rs  lib.rs
crates/trustchain-ffi/: Cargo.toml  README.md
crates/trustchain-ffi/src/: config.rs  gui.rs  lib.rs  mobile.rs  mobile_bridge.io.rs  mobile_bridge.rs
crates/trustchain-http/: Cargo.toml
crates/trustchain-http/src/: attestation_encryption_utils.rs  attestation_utils.rs  attestor.rs  config.rs  data.rs  errors.rs  ion.rs  issuer.rs  lib.rs  requester.rs  resolver.rs  root.rs  server.rs  state.rs  store.rs  temp_s_key.json  test.json  test_p_key.json  verifier.rs
crates/trustchain-http/static/: issuer.html
crates/trustchain-http/tests/: attestation.rs
crates/trustchain-ion/: Cargo.toml
crates/trustchain-ion/src/: attest.rs  attestor.rs  commitment.rs  config.rs  controller.rs  create.rs  data.rs  ion.rs  lib.rs  mnemonic.rs  resolver.rs  root.rs  sidetree.rs  utils.rs  verifier.rs
crates/trustchain-ion/tests/: config.rs  display.rs  resolver.rs  verifier.rs
crates/trustchain-rpc/: Cargo.toml
crates/trustchain-rpc/src/: config.rs  lib.rs  server.rs  state.rs
demo/: index.html
deployment/: index.html
dev-guide/: index.html
docs/: .pages  README.md  _coverpage.md  _sidebar.md  acknowledgements.md  contributing.md  demo.md  dev-guide.md  faq.md  getting-started.md  glossary.md  http-server.md  index.html  index.md  installation.md  ion.md  license.md  license_disclaimer.md  page2.md  roles.md  technical-notes.md  theme-custom.css  theme-style.css  usage.md  use-cases.md
docs-docsify/: README.md  acknowledgements.md  index.html  license_disclaimer.md  theme-custom.css  theme-style.css
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
faq/: index.html
getting-started/: index.html
glossary/: index.html
http-server/: index.html
ion/: index.html
ion-did/: package-lock.json  package.json  vm_sync.sh
ion-did/create_pipeline/: check_hashes.js  make_did_step1.js  make_did_step2.js  make_did_step3.js  make_did_update.js  trustchain_create.js  trustchain_create_streamline.js  trustchain_update.js
ion-did/ion-sdk/: package-lock.json
ion-did/test_adding_proof/: check_hashes.js  make_did_step2.js  make_did_update.js
license/: index.html
roles/: index.html
scripts/: publish.sh
scripts/launchd/: README.md  (+9 more)
search/: search_index.json
src/: controller.rs  create.rs  create_and_update.rs  create_and_update_and_deactivate.rs  data.rs  deactivate.rs  did_resolve.rs  key_holder.rs  key_manager.rs  lib.rs  main.rs  publisher.rs  resolve.rs  resolver.rs  sign.rs  subject.rs  verifier.rs
stylesheets/: extra.css
technical-notes/: index.html
tests/: resolver.rs
trustchain-api/: Cargo.toml
trustchain-api/src/: api.rs  lib.rs
trustchain-api/trustchain-api.xcodeproj/: project.pbxproj
trustchain-cli/: Cargo.toml
trustchain-cli/src/: api.rs  config.rs  lib.rs
trustchain-cli/trustchain-cli.xcodeproj/: project.pbxproj
trustchain-config/: Cargo.toml  trustchain_config.toml
trustchain-core/: Cargo.toml
trustchain-core/src/: attestor.rs  chain.rs  commitment.rs  config.rs  controller.rs  data.rs  display.rs  graph.rs  holder.rs  issuer.rs  key_manager.rs  lib.rs  publisher.rs  resolver.rs  root.rs  subject.rs  utils.rs  vc.rs  vc_encoding.rs  verifier.rs  vp.rs
trustchain-core/trustchain-core.xcodeproj/: project.pbxproj
trustchain-ffi/: Cargo.toml  README.md
trustchain-ffi-macos/: Cargo.toml
trustchain-ffi/src/: bridge_generated.io.rs  bridge_generated.rs  config.rs  gui.rs  lib.rs  mobile.rs  mobile_bridge.io.rs  mobile_bridge.rs  options.rs
trustchain-ffi/trustchain-ffi.xcodeproj/: project.pbxproj
trustchain-ffi/trustchain-ffi.xcodeproj/project.xcworkspace/xcuserdata/echapman.xcuserdatad/: UserInterfaceState.xcuserstate
trustchain-ffi/trustchain-ffi.xcodeproj/xcuserdata/echapman.xcuserdatad/xcschemes/: xcschememanagement.plist
trustchain-http/: Cargo.toml
trustchain-http/src/: attestation.rs  attestation_encryption_utils.rs  attestation_utils.rs  attestor.rs  challenge_response.rs  config.rs  data.rs  encryption.rs  errors.rs  handlers.rs  ion.rs  issuer.rs  lib.rs  middleware.rs  qrcode.rs  requester.rs  resolver.rs  root.rs  server.rs  state.rs  static_handlers.rs  store.rs  temp_s_key.json  test.json  test_p_key.json  utils.rs  vc.rs  verifier.rs
trustchain-http/static/: index.html
trustchain-http/tests/: attestation.rs  main.rs
trustchain-ion/: Cargo.toml
trustchain-ion/src/: api.rs  attest.rs  attestor.rs  bridge_generated.io.rs  bridge_generated.rs  commitment.rs  config.rs  controller.rs  create.rs  data.rs  did_methods.rs  lib.rs  mnemonic.rs  operations.rs  resolve.rs  resolver.rs  root.rs  sidetree.rs  subject.rs  update.rs  utils.rs  verifier.rs
trustchain-ion/tests/: attest.rs  config.rs  create.rs  display.rs  graph.rs  resolver.rs  vc.rs  verifier.rs
trustchain-ion/trustchain-ion.xcodeproj/: project.pbxproj
trustchain-issuer-backend/: Cargo.toml
trustchain-issuer-backend/src/: config.rs  data.rs  handlers.rs  lib.rs  main.rs  qrcode.rs  resolution.rs  vc.rs
trustchain-issuer-frontend/: Cargo.toml  README.md
trustchain-issuer-frontend/src/: app.rs
trustchain-spv/: Cargo.toml
trustchain-spv/src/: lib.rs  logger.rs  spv.rs
usage/: index.html
use-cases/: index.html
www/: index.js  package-lock.json  package.json
(+21 files in other folders)
