[package]
name = "trustchain"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Trustchain decentralised PKI reference implementation."

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Trustchain Devs"]
license = "MIT OR Apache-2.0"
description = "Trustchain decentralised PKI reference implementation."
homepage = "https://alan-turing-institute.github.io/trustchain/"
repository = "https://github.com/alan-turing-institute/trustchain/"
keywords = ["pki", "did", "vc", "vp"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.6"
axum-server = "0.5.1"
axum-test-helper = "0.2.0"
bip39 = "2.0.0"
bitcoin = "0.29.2"
bitcoincore-rpc = "0.16.0"
chrono = "0.4.26"
clap = "4.0.32"
did-ion = "0.2"
did-method-key = "0.2.2"
ed25519-dalek-bip32 = "0.3.0"
flate2 = "1.0.24"
flutter_rust_bridge = "=1.64.0"
futures = "0.3.28"
glob = "0.3"
hex = "0.4.3"
hyper = "0.14.26"
image = "0.23.14"
ipfs-api-backend-hyper = "0.6"
ipfs-hasher = "0.13.0"
is_empty = "0.2.0"
itertools = "0.13.0"
josekit = "0.8"
k256 = "0.13.1"
lazy_static = "1.4.0"
log = "0.4"
mockall = "0.11.4"
mongodb = "2.3.1"
petgraph = "0.6"
port_check = "0.2.1"
qrcode = "0.12.0"
rand = "0.8"
reqwest = "0.11.16"
secp256k1 = "0.27.0"
serde = "1.0"
serde_jcs = "0.1.0"
serde_json = "1.0"
serde_with = "3.4.0"
sha2 = "0.10.7"
shellexpand = "3.1.0"
ssi = "0.7"
tempfile = "3.9.0"
thiserror = "1.0"
tokio = "1.20.1"
toml = "0.7.2"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
trustchain-api = { path = "crates/trustchain-api", version = "0.1.0" }
trustchain-core = { path = "crates/trustchain-core", version = "0.2.0" }
trustchain-ffi = { path = "crates/trustchain-ffi", version = "0.1.0" }
trustchain-http = { path = "crates/trustchain-http", version = "0.1.0" }
trustchain-ion = { path = "crates/trustchain-ion", version = "0.2.0" }

[dependencies]
trustchain-api = { workspace = true, optional = true }
trustchain-core = { workspace = true }
trustchain-ffi = { workspace = true, optional = true }
trustchain-http = { workspace = true, optional = true }
trustchain-ion = { workspace = true, optional = true }

[features]
default = ["api"]
http = ["api", "dep:trustchain-http"]
api = ["ion", "dep:trustchain-api"]
ion = ["dep:trustchain-ion"]
ffi = ["api", "dep:trustchain-ffi"]
