[package]
name = "trustchain-api"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"


[dependencies]
trustchain-core = { path = "../trustchain-core" }
trustchain-ion = { path = "../trustchain-ion" }
async-trait = "0.1"
serde_json = "1.0"
ssi = { version = "0.7", features = ["http-did", "secp256k1"]}
did-ion = { version = "0.2"}
futures = "0.3.28"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
