[package]
name = "trustchain-cli"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"

[[bin]]
name = "trustchain-cli"
path = "src/bin/main.rs"

[dependencies]
trustchain-core = { path = "../trustchain-core" }
trustchain-ion = { path = "../trustchain-ion" }
trustchain-api = { path = "../trustchain-api" }

clap = { version = "4.0.32", features = ["derive", "cargo"] }
did-ion = { git = "https://github.com/alan-turing-institute/ssi.git", branch = "1-rss" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssi = { git = "https://github.com/alan-turing-institute/ssi.git", branch = "1-rss", features = [
    "http-did",
    "secp256k1",
    "rss",
] }
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.7.2"
