[package]
name = "trustchain-core"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"


[dependencies]
ps_sig = { path = "../../RSS" }

async-trait = "0.1"
base64 = "0.13"
canonical_json = "0.4.0"
chrono = "0.4"
did-method-key = {git="https://github.com/alan-turing-institute/ssi.git", branch="modify-encode-sign-jwt"}
futures = "0.3.21"
petgraph = {version = "0.6"}
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1.0"
serde_json = "1.0"
sha2 = "0.10.7"
ssi = {git="https://github.com/alan-turing-institute/ssi.git", branch="modify-encode-sign-jwt", features = ["http-did", "secp256k1"]}
tempfile = { version = "3.3" }
thiserror = "1.0"
tokio = {version = "1.20.1", features = ["full"]}

[dev-dependencies]
mockall = "0.11.2"
