[package]
name = "trustchain-ffi"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustchain-core = { path = "../trustchain-core" }
trustchain-ion = { path = "../trustchain-ion" }
trustchain-api = { path = "../trustchain-api" }
# reference end of hack week version for frozen working demo of RSS
ps_sig = { git = "https://github.com/alan-turing-institute/RSS.git", rev="2725e151c6a8268ffbc20facb407e6848d1d70db" }

anyhow = "1.0"
chrono = "0.4.26"
did-ion="0.1.0"
flutter_rust_bridge = "1"
lazy_static="1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssi = "0.4"
thiserror="1.0"
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
toml="0.7.2"
