[package]
name = "trustchain-ffi"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustchain-core = { path = "../trustchain-core" }
trustchain-ion = { path = "../trustchain-ion" }
trustchain-api = { path = "../trustchain-api" }
trustchain-http = { path = "../trustchain-http" }

anyhow = "1.0"
chrono = "0.4.26"
did-ion = { git = "https://github.com/alan-turing-institute/ssi.git", rev = "1aa3223a384ee71df1333bbce04af445e852eab5" }
# Fixed to same version used to generate bridge: `flutter_rust_bridge_codegen@1.64.0`
flutter_rust_bridge = "=1.64.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssi = { git = "https://github.com/alan-turing-institute/ssi.git", rev = "1aa3223a384ee71df1333bbce04af445e852eab5", features = [
    "http-did",
    "secp256k1",
    "rss",
] }
thiserror = "1.0"
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
toml = "0.7.2"
