[package]
name = "trustchain-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "trustchain-http"
path = "src/bin/main.rs"

[dependencies]
trustchain-core = { path = "../trustchain-core" }
trustchain-ion = { path = "../trustchain-ion" }
did-ion="0.1.0"
clap = { version = "^4", features=["derive", "env", "cargo"] }
ssi = "0.4"
chrono = "^0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
tokio = {version = "1.20.1", features = ["full"]}
execute = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1.0"
log = "0.4"
uuid = {version="1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
gloo-console = "0.2.3"
base64 = "0.21.0"
qrcode = "0.12.0"
image = "0.23.14"
hyper = "0.14.26"
