[package]
name = "trustchain-ion"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "trustchain-cli"
path = "src/bin/main.rs"

[dependencies]
trustchain-core = { path = "../trustchain-core" }
async-trait = "0.1"
bitcoin = "0.29.2"
bitcoincore-rpc = "0.16.0"
canonical_json = "0.4.0"
clap = { version = "~4.0", features=["derive", "cargo"] }
did-ion="0.1.0"
flate2 = "1.0.24"
futures = "0.3.21"
hex = "0.4.3"
ipfs-api-backend-hyper = {version="0.6", features = ["with-send-sync"]}
ipfs-hasher = "0.13.0"
lazy_static="1.4.0"
mongodb = "2.3.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1.0"
serde_json = "1.0"
sha2 = "0.10.7"
ssi = { version = "0.4", features = ["http-did", "secp256k1"] }
thiserror = "1.0"
toml="0.7.2"
tokio = {version = "1.20.1", features = ["full"]}

[dev-dependencies]
glob = "0.3"
mockall = "0.11.2"
