[package]
name = "trustchain-ion"
version = "0.2.0"
authors = ["Trustchain Devs"]
edition = "2021"


[dependencies]
trustchain-core = { path = "../trustchain-core" }
anyhow = "1.0"
async-trait = "0.1"
bip39 = "2.0.0"
bitcoin = "0.29.2"
bitcoincore-rpc = "0.16.0"
chrono = "0.4"
did-ion = { git = "https://github.com/alan-turing-institute/ssi.git", rev = "1aa3223a384ee71df1333bbce04af445e852eab5" }
ed25519-dalek-bip32 = "0.3.0"
flate2 = "1.0.24"
futures = "0.3.21"
hex = "0.4.3"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-send-sync"] }
ipfs-hasher = "0.13.0"
k256 = "0.13.1"
lazy_static = "1.4.0"
mongodb = "2.3.1"
reqwest = "0.11"
secp256k1 = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
ssi = { git = "https://github.com/alan-turing-institute/ssi.git", rev = "1aa3223a384ee71df1333bbce04af445e852eab5", features = [
    "http-did",
    "secp256k1",
    "rss",
] }
thiserror = "1.0"
toml = "0.7.2"
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
glob = "0.3"
itertools = "0.13.0"
mockall = "0.11.2"
