[package]
name = "trustchain-issuer-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
gloo-console = "0.2.3"
base64 = "0.21.0"
qrcode = "0.12.0"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1.0"
