[package]
name = "trustchain-api"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "API for Trustchain."

[dependencies]

async-trait = { workspace = true }
chrono = { workspace = true }
did-ion = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ssi = { workspace = true, features = ["http-did", "secp256k1"] }
trustchain-core = { workspace = true }
trustchain-ion = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
