[package]
name = "trustchain-cli"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "CLI for Trustchain."

[[bin]]
name = "trustchain-cli"
path = "src/bin/main.rs"

[dependencies]

clap = { workspace = true, features = ["derive", "cargo"] }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ssi = { workspace = true, features = ["http-did", "secp256k1"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
trustchain-api = { workspace = true }
trustchain-core = { workspace = true }
trustchain-http = { workspace = true }
trustchain-ion = { workspace = true }
