[package]
name = "trustchain-cli"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"

[[bin]]
name = "trustchain-cli"
path = "src/bin/main.rs"

[dependencies]

clap = { workspace = true, features = ["derive", "cargo"] }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ssi = { workspace = true, features = ["http-did", "secp256k1", "rss"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
trustchain-api = { path = "../trustchain-api" }
trustchain-core = { path = "../trustchain-core" }
trustchain-cr = { path = "../trustchain-cr" }
trustchain-http = { path = "../trustchain-http" }
trustchain-ion = { path = "../trustchain-ion" }
