[package]
name = "trustchain-core"
version = "0.2.0"
authors = ["Trustchain Devs"]
edition = "2021"

[dependencies]
async-trait = { workspace = true }
base64 = "0.13"
did-method-key = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_jcs = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ssi = { workspace = true, features = ["http-did", "secp256k1"] }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
