[package]
name = "trustchain-cr"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2024"

[dependencies]
is_empty = { workspace = true }
josekit = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
ssi = { workspace = true, features = ["http-did", "secp256k1", "rss"] }
thiserror = { workspace = true }
trustchain-core = { path = "../trustchain-core" }

[dev-dependencies]
tempfile = { workspace = true }
