[package]
name = "trustchain-rpc"
version = "0.1.0"
authors = ["Trustchain Devs"]
edition = "2021"

[[bin]]
name = "trustchain-rpc"
path = "src/bin/main.rs"

[dependencies]

anyhow = { workspace = true }
jsonrpsee = { version = "0.26.0", features = ["http-client", "server"] }
# log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# toml = { workspace = true }
tracing = { workspace = true } # "0.1.44"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# trustchain-api = { path = "../trustchain-api" }
# trustchain-core = { path = "../trustchain-core" }
# trustchain-ion = { path = "../trustchain-ion" }
